@@ -73,6 +73,7 @@ x added: `$.noop()` for custom responses
 - added: `NOSQLREADER(filename)` for reading different files of NoSQL embedded databases
 - added: `TABLEREADER(filename)` for reading different files of Table embedded databases
 - added: `Mail.use()` an alias for `F.useSMTP()`
+- added: `F.onAudit(name, data)` delegate for handling audit logs
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
